--- a/Assets/package.json
+++ b/Assets/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^8.2.0"
+    "inquirer": "^8.2.0",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "prettier": "2.4.1"
